syntax = "proto3";
package yazzyyaz.wordle.wordle;

import "gogoproto/gogo.proto";
import "wordle/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/YazzyYaz/wordle/x/wordle/types";

// GenesisState defines the wordle module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
